--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-cli-plugin-gas",
+  "name": "@ijusplab/vue-cli-plugin-gas",
   "version": "0.1.0",
   "description": "Vue CLI plugin to setup Google Apps Script project using Vue and Vuetify as frontend tools.",
   "main": "index.js",
