--- a/package.json
+++ b/package.json
@@ -25,10 +25,11 @@
     "url": "https://gitlab.com/ijusplab/incubadora/vue-cli-plugin-gas/issues"
   },
   "dependencies": {
-    "@types/node": "^13.9.1",
     "camelcase": "^5.3.1",
     "countries-and-timezones": "^2.0.5",
     "spdx-license-list": "^6.1.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@types/node": "^13.9.1"
+  }
 }
