--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@ijusplab/vue-cli-plugin-gas",
-  "version": "1.0.8",
-  "description": "Vue CLI plugin to setup Google Apps Script project using Vue and Vuetify as frontend tools.",
+  "version": "1.0.9",
+  "description": "Vue CLI plugin to setup a Google Apps Script project using Vue as the frontend tool.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
