--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "camelcase": "^5.3.1",
     "chalk": "^3.0.0",
     "countries-and-timezones": "^2.1.1",
+    "inquirer": "^7.1.0",
     "spdx-license-list": "^6.1.0"
   },
   "devDependencies": {
